--- a/ecomerce/core/templates/core/base.html
+++ b/ecomerce/core/templates/core/base.html
@@ -9,7 +9,7 @@
     <title>Ecomerce</title>
 
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'core/css/estilos.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/estilos.1.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -23,39 +23,42 @@
 
 <body>
     <header>
-        <img class="logo" src="{% static 'core/img/automovillogo.jpg' %}" alt="logo de la pagina">
+        <img class="logo" src="{% static 'core/img/carrito.gif' %}" alt="logo de la pagina">
         <ul class="navegacion">
             <li>
                 <!--para abrir enlace en otra pestaña target="_blank"-->
-                <a href="{% url 'home' %}">Home</a>
+                <a href="{% url 'home' %}">Principal</a>
             </li>
             <li>
-                <a href="{% url 'listado_automoviles' %}">Listar Auto</a>
+                <a href="{% url 'listado_productos' %}">Listar productos</a>
             </li>
             <li>
                 <a href="{% url 'galeria' %}">Galeria</a>
             </li>
             <li>
-                <a href="{% url 'formulario' %}">Registrar Autos</a>
+                <a href="{% url 'formulario' %}">Agregar articulos</a>
+            </li>
+            <li>
+                <a href="{% url 'logout' %}">Salir</a>
             </li>
         </ul>
     </header>
     <div class="landing">
         <div class="slider">
             <div>
-                <img title="Imagen de un auto gris" class="imagen_landing" src="{% static 'core/img/automovil.png' %}"
+                <img title="El E-commerce de Vanazuela" class="imagen_landing"
+                    src="{% static 'core/img/tecladove.png' %}" alt="imagen de un automovil">
+            </div>
+            <div>
+                <img title="Transacciones seguras" class="imagen_landing" src="{% static 'core/img/pagofacil.jpg' %}"
                     alt="imagen de un automovil">
             </div>
             <div>
-                <img title="Imagen de un auto rojo" class="imagen_landing" src="{% static 'core/img/auto2.png' %}"
-                    alt="imagen de un automovil">
-            </div>
-            <div>
-                <img class="imagen_landing" title="Imagen de un auto blanco" src="{% static 'core/img/auto3.png' %}"
-                    alt="imagen de un automovil">
+                <img class="imagen_landing" title="Productos a su alcance"
+                    src="{% static 'core/img/ecommerceblog.jpg' %}" alt="imagen de un automovil">
             </div>
         </div>
-        <h2 class="eslogan">La mejor ecomerce del pais</h2>
+        <h2 class="eslogan">Encuentre aqui todos los productos que necesite.</h2>
 
         <ul class="redes_sociales">
             <li><img src="{% static 'core/img/social-twitter.png' %}" alt="twitter"></li>
