--- a/ecomerce/core/templates/core/formulario.html
+++ b/ecomerce/core/templates/core/formulario.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-3 ">
-            <h1>Registrar automovil</h1>
+            <h1>Registrar producto</h1>
         </div>
     </div>
 
