--- a/ecomerce/core/templates/core/galeria.html
+++ b/ecomerce/core/templates/core/galeria.html
@@ -3,18 +3,18 @@
 {% load static %}
 
 {% block content %}
-        <div class="galeria">
-            <a data-fancybox="gallery" href="{% static 'core/img/automovil.png' %}">
-                <img src="{% static 'core/img/automovil.png' %}">
-            </a>
-            <a data-fancybox="gallery" href="{% static 'core/img/auto2.png' %}">
-                <img src="{% static 'core/img/auto2.png' %}">
-            </a>
-            <a data-fancybox="gallery" href="{% static 'core/img/auto3.png' %}">
-                <img src="{% static 'core/img/auto3.png' %}">
-            </a>
-            <a data-fancybox="gallery" href="{% static 'core/img/deportivo.png' %}">
-                <img src="{% static 'core/img/deportivo.png' %}">
-            </a>
-        </div>
+<div class="galeria">
+    <a data-fancybox="gallery" href="{% static 'core/img/descarga.jpg' %}">
+        <img src="{% static 'core/img/descarga.jpg' %}">
+    </a>
+    <a data-fancybox="gallery" href="{% static 'core/img/apple.jpg' %}">
+        <img src="{% static 'core/img/apple.jpg' %}">
+    </a>
+    <a data-fancybox="gallery" href="{% static 'core/img/lenovo.jpg' %}">
+        <img src="{% static 'core/img/lenovo.jpg' %}">
+    </a>
+    <a data-fancybox="gallery" href="{% static 'core/img/dell.jpg' %}">
+        <img src="{% static 'core/img/dell.jpg' %}">
+    </a>
+</div>
 {% endblock content %}
