--- a/ecomerce/core/templates/core/modificar_producto.html
+++ b/ecomerce/core/templates/core/modificar_producto.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-3 ">
-            <h1>Modificar automovil</h1>
+            <h1>Modificar articulo</h1>
         </div>
     </div>
 
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-md-6 offset-3 ">
                 <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Patente</label>
+                    <label for="inputEmail3" class="col-sm-2 col-form-label">Articulo</label>
                     <div class="col-sm-10">
                         <input type="text" name="txtPatente" id="txtPatente" value="{{ auto.patente }}">
                     </div>
